--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -777,16 +777,11 @@ textarea.form-control {
   margin-bottom: 30px;
   /* background: rgba(250,250,250,0.25); */
   border-radius: 10px;
-  padding: 30px;
+  padding: 10px;
   font-weight: 700;
 }
 .contact-row i {
-  width:55px;
-  font-size: 30px;
-  display:block;
-}
-.contact-row i.fa-envelope {
-  font-size: 25px;
+  width: auto;
 }
 
 /*==============================================
